--- a/ui_lovelace_minimalist/dashboard/views/rooms/guest-bathroom.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/guest-bathroom.yaml
@@ -7,6 +7,32 @@ cards:
       - sensor_prefix: guest_bath
       - room_name: Guest Bathroom
 
+  #################
+  # STATUS CHIPS
+  #################
+  - type: custom:mod-card
+    style: 
+      hui-horizontal-stack-card$: |
+        #root { 
+          justify-content: center;
+        }
+    card:
+      type: horizontal-stack
+      cards:
+        - type: "custom:button-card"
+          template: chip_mdi_icon_state
+          entity: group.cat_food_status
+          icon: mdi:cat
+          label: ''
+          styles:
+            icon:
+              - color: >
+                  [[[ if (entity.state == 'on') 
+                        return "var(--red-color)" ;
+                      else return "var(--green-color)"; ]]]
+          variables:
+            ulm_chip_mdi_icon_state_entity: group.cat_food_status
+
   - type: "custom:button-card"
     template: card_title
     label: Devices
