--- a/ui_lovelace_minimalist/dashboard/views/rooms/living-room.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/living-room.yaml
@@ -65,14 +65,24 @@ cards:
       ulm_card_thermostat_enable_popup: true
       ulm_card_thermostat_enable_background_color: true
   
-  - type: "custom:button-card"
-    template: card_light
-    entity: light.tv_led
-    variables:
-      ulm_card_light_enable_slider: true
-      ulm_card_light_enable_color: true
-      ulm_card_light_force_background_color: true
-      ulm_card_light_enable_collapse: true
+  - type: horizontal-stack
+    cards:
+      - type: "custom:button-card"
+        template: card_light
+        entity: light.tv_led
+        variables:
+          ulm_card_light_enable_slider: true
+          ulm_card_light_enable_color: true
+          ulm_card_light_force_background_color: true
+          ulm_card_light_enable_collapse: true
+      - type: 'custom:button-card'
+        template: card_script
+        variables:
+          ulm_card_script_title: Sound Bar
+          ulm_card_script_icon: 'mdi:soundbar'
+        tap_action:
+          action: call-service
+          service: script.sound_bar_power
 
   - type: media-control
     entity: media_player.fire_tv_192_168_68_107
