--- a/ui_lovelace_minimalist/dashboard/views/rooms/master-bathroom.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/master-bathroom.yaml
@@ -1,5 +1,5 @@
 title: "Master Bathroom"
-path: "master-bathroom"
+path: "master-bath"
 cards:
   - type: custom:decluttering-card
     template: room header
