--- a/ui_lovelace_minimalist/dashboard/views/rooms/guest-bathroom.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/guest-bathroom.yaml
@@ -1,5 +1,5 @@
 title: "Guest Bathroom"
-path: "guest-bathroom"
+path: "guest-bath"
 cards:
   - type: custom:decluttering-card
     template: room header
