--- a/ui_lovelace_minimalist/dashboard/views/rooms/master-bedroom.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/master-bedroom.yaml
@@ -15,7 +15,7 @@ cards:
     cards:
       - type: "custom:button-card"
         template: card_light
-        entity: light.bedroom_light
+        entity: light.master_bedroom_light
         variables:
           ulm_card_light_enable_slider: true
           ulm_card_light_enable_collapse: true
