--- a/entities/templates/devices_offline.yaml
+++ b/entities/templates/devices_offline.yaml
@@ -1,6 +1,10 @@
 ####
 # Count devices that are offline
-#
+# Domains to exclude
+#  - button
+#  - number
+#  - tts
+#  - stt
 #####
 
 - sensor:
@@ -8,7 +12,10 @@
     unique_id: e9f2af25-7bab-4ad2-8cd0-47f2b3cae058
     icon: 'mdi:cloud-off-outline'
     state: "{{ states
-| selectattr('domain','in',['binary_sensor','light','sensor','switch','media_player'])
+| selectattr('domain','in',['binary_sensor','light','sensor','switch','media_player', 'select'])
 | selectattr('state','in', ['unknown', 'unavailable'])
+| rejectattr('entity_id','search', 'poat_rgb|mfc_7860|plex|seedbox|poat_pi|media_player.xbox')
+| rejectattr('entity_id','in', ['select.cat_noms_manual_feed', 'sensor.cat_noms_battery_status'])
+| rejectattr('name','search', 'Kitchen Bulb')
 | list
 | count }}"
