--- a/ui_lovelace_minimalist/dashboard/views/rooms/shed.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/shed.yaml
@@ -11,6 +11,10 @@ cards:
     template: card_title
     label: Devices
 
+  - type: 'custom:button-card'
+    template: card_generic_swap
+    entity: binary_sensor.shed_door_sensor_window_door_is_open
+
   - type: custom:decluttering-card
     template: z_wave_climate
     variables:
