--- a/ui_lovelace_minimalist/dashboard/views/rooms/master-bathroom.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/master-bathroom.yaml
@@ -22,18 +22,6 @@ cards:
         variables:
           ulm_card_light_color: blue
 
-  - type: custom:decluttering-card
-    template: z_wave_climate
-    variables:
-      - sensor_prefix: master_bath
-      - node_number: 4
-
-  - type: custom:decluttering-card
-    template: z_wave_double_relay
-    variables:
-      - sensor_prefix: master_bath
-      - node_number: 15
-
   - type: "custom:button-card"
     template: card_title
     label: Sensors
@@ -45,3 +33,19 @@ cards:
       ulm_card_graph_color: "var(--google-yellow)"
       ulm_card_graph_entity: sensor.master_bath_gfi_8_1min
       ulm_card_graph_name: Electricity 1 min
+
+  - type: "custom:button-card"
+    template: card_title
+    label: Device Health
+
+  - type: custom:decluttering-card
+    template: z_wave_climate
+    variables:
+      - sensor_prefix: master_bath
+      - node_number: 4
+
+  - type: custom:decluttering-card
+    template: z_wave_double_relay
+    variables:
+      - sensor_prefix: master_bath
+      - node_number: 15
